POR/RefEdge/src/objects/Account_Attribute__c.object
<CustomObject>
    <description>Junction object for Account and Attribute.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Reference_Basic_Information__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Attributes</relationshipLabel>
        <relationshipName>Account_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Account Attributes</relationshipLabel>
        <relationshipName>Account_Attributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Attributes</relationshipLabel>
        <relationshipName>Account_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inheritable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is selected this attribute will be automatically inherited by related Contacts and Reference Content.</description>
        <inlineHelpText>When this checkbox is selected this attribute will be automatically inherited by related Contacts and Reference Content.</inlineHelpText>
        <label>Inheritable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_fromMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Basic_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Profile</label>
        <referenceTo>Reference_Basic_Information__c</referenceTo>
        <relationshipLabel>Account Attributes</relationshipLabel>
        <relationshipName>Account_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Content</label>
        <referenceTo>Reference_Content__c</referenceTo>
        <relationshipLabel>Account Attributes</relationshipLabel>
        <relationshipName>Account_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>